# standardgrid

./: .gitignore  CHANGELOG.md  LICENSE  README..md  README.md  pyproject.toml  test.py  testefina.py
examples/: csquares.py  demo.py  generator.py  inspire.py  standards.py  test_grid.py
standardgrid/: __init__.py  generator.py  grid.py  pyproject.toml  standards.py
standardgrid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_export.py  test_generator.py  test_grid.py  test_standards.py  teste.py
