[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "standardgrid"
version = "0.9.0"
description = "Python library for generating official spatial reference grids aligned with recognised standards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Pedro Monteiro" }
]

keywords = [
    "gis",
    "grid",
    "spatial",
    "marine",
    "habitat",
    "csquares",
    "inspire",
    "emodnet"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "openpyxl>=3.1"
]

[project.urls]
Homepage = "https://github.com/pmontei/standardgrid"
Repository = "https://github.com/pmontei/standardgrid"
Issues = "https://github.com/pmontei/standardgrid/issues"

[tool.setuptools]
packages = ["standardgrid"]