[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "standardgrid"
version = "1.0.1"
description = "Generate standards-compliant spatial reference grids."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Pedro Monteiro", email = "pmontei@ualg.pt" }
]

keywords = [
    "gis",
    "grid",
    "reference grid",
    "spatial",
    "geospatial",
    "centroids",
    "csquares",
    "inspire",
    "marine",
    "habitat",
    "emodnet",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "openpyxl>=3.1"
]

[project.urls]
Homepage = "https://github.com/pmontei/standardgrid"
Repository = "https://github.com/pmontei/standardgrid"
Issues = "https://github.com/pmontei/standardgrid/issues"

[tool.setuptools]
packages = ["standardgrid"]