[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "standardgrid"
version = "0.6.0-dev"
description = "Generate official standards-aligned spatial reference grids."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Pedro Monteiro" }
]

keywords = [
    "GIS",
    "grid",
    "spatial",
    "INSPIRE",
    "C-Squares",
    "reference grid"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas"
]

[tool.setuptools]
packages = ["standardgrid"]